# leep

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh  compile_commands.json  premake5.lua
assets/: pbr.glsl
assets/scripts/: init.lua
assets/shaders/: eqr-to-cube-frag.glsl  eqr-to-cube-vert.glsl  fullscreen-img-frag.glsl  fullscreen-img-vert.glsl  lut-gen-frag.glsl  lut-gen-vert.glsl  pbr-epic-fs.glsl  pbr-epic-vs.glsl  pbr-filam-fs.glsl  pbr-filam-vs.glsl  pbr-frag.glsl  pbr-vert.glsl  prefilter-env-frag.glsl  prefilter-env-vert.glsl  skybox-frag.glsl  skybox-vert.glsl  voxmat-frag.glsl  voxmat-vert.glsl
assets/tex/: chicken.tga
doc/: GOALS  TODO
include/: leep.h  motoret.h
leep/: premake5.lua
leep/docs/: adding-mats.txt
leep/src/: leep.h  the.h
src/: clicktaclysm.h  dungeon.cpp  dungeon.h  game-state.h  helper-functions.cpp  helper-functions.h  main.c  main.cpp  utility.h
src/core/: chrono.h  common-defs.h  config.h  input.cpp  input.h  logger.cpp  logger.h  logic-thread.cpp  manager.cpp  manager.h  memory.h  scene-graph.cpp  scene-graph.h  scene.cpp  scene.h  (+4 more)
tests/: create-n-destroy.cpp  default.cpp  defaulta.cpp  pbr-spheres.cpp
the/: CMakeLists.txt
the/src/: CMakeLists.txt  the.h
the/src/core/: buddy.c  buddy.h  chrono.c  chrono.h  config.h  definitions.h  execution.c  execution.h  hmap.c  hmap.h  io.c  io.h  manager.c  manager.h  mem.c  mem.h
the/src/ecs/: entity.c  entity.h
the/src/render/: camera.c  camera.h  internalresources.c  internalresources.h  material.h  rendercommands.c  rendercommands.h  renderer.c  renderer.h  renderertypes.h
the/src/tools/: gl-impl-cimgui.c  helper-functions.c  helper-functions.h  imgui-tools.c  imgui-tools.h  lua-functions.c  lua-functions.h  lua-scripting.c  lua-scripting.h  resource-map.c  resource-map.h
tools/: normalize-obj.py
(+329 files in other folders)
